

================================================================================
Version 1.1.1.0
================================================================================

New Features:
- PlayerMetronome can be muted with the function "setMuted".
- PCX and DCX image format support.

Changes:
- Resource tree filtering is more consistent with other trees and hides
  folders whose contents do not match the filter.
- Application auto-detects old version and asks to overwrite content
  folder with own content folder.
- Kink / Fetish tags are sorted.

Fixed Bugs:
- Metronome not accepting null or empty string to reset beat sound was fixed.
- Fixed Metronome not clearing on stop.
- "Pause Player when app is not active" setting can now be actually toggled.
- Filtered Resource tree updates when a Resource is added or removed.
- Wildly jumping PlayerTextBox fixed.
- Fixed buttons in Player not accepting shortcuts and changing their text when
  new buttons are created.
- Fixed Sounds in PlayerMetronome not playing if the metronome was too fast.
- On reloading a Project in the Editor the tags will not show up multiple times.


================================================================================
Version 1.1.2.0
================================================================================

Fixed Bugs:
- Fixed the tutorial. It should not get stuck or make the highlights disappear now.
- Sped up loading times at startup a little.


================================================================================
Version 1.2.0.0
================================================================================

New Features:
- The use of PhysFS makes it possible to use archived files transparently and
  archives can be added as a new type of pseudo-Resource, which can contain
  multiple resources.

Changes:
- JOIP-Engine uses PhysFS to allow restricted acces to files only, making it
  impossible to write or read outside of the currently loaded project folder.