@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Credits</title>
+  <title>About</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -29,12 +29,12 @@
 
 
 <body>
-  <h1>Credits</h1>
+  <h1>About</h1>
 
   <hr>
 
   <div class="container">
-    <p>Shows the credits and licenses. Yes that's it.</p>
+    <p>Shows the credits, licenses and the changelog. Yes that's it.</p>
   </div>
 </body>
 
