@@ -66,7 +66,7 @@
       <item>
        <widget class="CMenuButton" name="pCreditsButton">
         <property name="text">
-         <string>Credits</string>
+         <string>About</string>
         </property>
         <property name="flat">
          <bool>true</bool>
